fix: advanced options on create certificate don't collapse
fixes #14

--- a/static/static/css/cacert.css
+++ b/static/static/css/cacert.css
@@ -14,3 +14,6 @@
 .tooltip-inner {
     white-space:pre-wrap;
 }
+.experthidden{
+	display: none;
+}
